--- a/AULA01_ATIVIDADE.ipynb
+++ b/AULA01_ATIVIDADE.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Marcela Vitória da Silva Souza 2OL**"
+        "**Marcela Vitória da Silva Souza 2OL ATIVIDADE AULA 01**"
       ],
       "metadata": {
         "id": "3YNx47JsvAM5"
